# rag-app

./: .env.example  .gitignore  README.md  file_registry.json  main.py  pyproject.toml  test.ipynb
src/rag_app/: app.py  file_registry.py  ingest.py  llm_client.py  query.py
